--- a/Angular/ProfileManager/src/app/components/add-profile-signal-form/add-profile-signal-form.html
+++ b/Angular/ProfileManager/src/app/components/add-profile-signal-form/add-profile-signal-form.html
@@ -142,7 +142,11 @@
 
             <mat-form-field appearance="fill" class="flex-1 min-w-0 block">
               <mat-label>Star</mat-label>
-              <mat-select [formField]="profileDetailForm.star" placeholder="Birth Star">
+              <mat-select
+                (selectionChange)="onStarChange($event)"
+                [formField]="profileDetailForm.star"
+                placeholder="Birth Star"
+              >
                 @for (star of STARS_DATA | keyvalue; track star.key; let i = $index) {
                   <mat-option [value]="star.key"> {{ i + 1 }}. {{ star.key }}</mat-option>
                 }
