--- a/Angular/ProfileManager/src/app/components/add-profile/comments/comments.html
+++ b/Angular/ProfileManager/src/app/components/add-profile/comments/comments.html
@@ -41,7 +41,7 @@
         </div>
       } @empty {
         <div class="flex items-center justify-center py-8 px-4 bg-gray-50 rounded-lg text-gray-400">
-          <mat-icon class="text-5xl w-12 h-12 mb-2">chat_bubble_outline</mat-icon>
+          <mat-icon class="text-5xl w-12 h-12 m-2">chat_bubble_outline</mat-icon>
           <p class="m-0 text-sm">No comments yet</p>
         </div>
       }
@@ -49,11 +49,6 @@
 
     @if (action() !== 'view') {
       <div class="flex items-start mt-2">
-        <div class="hidden md:block mr-4">
-          <span
-            class="w-3 h-3 rounded-full bg-transparent border-2 border-dashed border-teal-700 block"
-          ></span>
-        </div>
         <div class="flex flex-1 flex-col md:flex-row gap-2 md:gap-3 items-start">
           <mat-form-field appearance="fill" class="flex-1 m-0 block w-full md:w-auto">
             <mat-label>Add Comment</mat-label>
