refactor: update HTML syntax for self-closing tags and improve component structure across various files

--- a/Angular/ProfileManager/src/app/app.html
+++ b/Angular/ProfileManager/src/app/app.html
@@ -83,6 +83,6 @@
     }
 
     <!-- Router Outlet for Components -->
-    <router-outlet></router-outlet>
+    <router-outlet />
   </mat-drawer-content>
 </mat-drawer-container>
